# nikke

./: .gitignore  MarbleAim.spec  README.md  build_release.bat  config.example.json  launcher.py  pyproject.toml  requirements.txt  发布说明.md  启动弹珠助手.bat  开发流程.md
marble_aim/: __init__.py  __main__.py  app.py  calibration.py  capture.py  config.py  geometry.py  overlay.py  vision.py
tests/: test_app.py  test_calibration.py  test_config.py  test_geometry.py  test_main.py  test_overlay.py  test_vision.py
tools/: annotate_detection.py  overlay_video_prediction.py  video_contact_sheet.py
