[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "marble-aim"
version = "0.1.0"
description = "Windows marble trajectory recognition and click-through overlay"
requires-python = ">=3.12,<3.13"
dependencies = [
  "numpy>=2.1,<3",
  "opencv-python-headless==4.13.0.92",
  "PySide6==6.11.1",
  "mss==10.2.0",
  "pywin32==312",
  "scipy==1.18.0",
]

[project.optional-dependencies]
test = ["pytest==9.0.1"]
package = ["pyinstaller==6.21.0"]

[project.scripts]
marble-aim = "marble_aim.__main__:main"

[tool.setuptools.packages.find]
include = ["marble_aim*"]

[tool.setuptools.package-data]
marble_aim = ["assets/*.npz"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
